--- a/Latex/Main.tex
+++ b/Latex/Main.tex
@@ -36,9 +36,9 @@
 
 
 \begin{document}
-\title{Consecutivity-Restricted Permutations}
-
-
+\title{Counting Permutations Restricted by Length of Longest Consecutive Subsequence}
+\author{Xiangyu Chen}
+\maketitle
 
 \section{Introduction}
 \label{introduction}
